--- a/_sass/page.scss
+++ b/_sass/page.scss
@@ -247,8 +247,10 @@ $button-size: 1.5rem;
 	}
 }
 
+
 /* Index listing specific styling */
 #index {
+	float: left;
 	@include container;
 	@include grid(12,10);
 	@include prefix(12,1);
@@ -272,22 +274,172 @@ $button-size: 1.5rem;
 		border-bottom: 1px solid lighten($black,70);
 	}
 	article {
-		h2 {
-			margin-bottom: 4px;
-			@include font-rem(20);
-			&.link-post {
-				margin-bottom: 0px + $doc-line-height;
-				margin-bottom: 0rem + ($doc-line-height / $doc-font-size);
+		width: 800px;
+		height: 120px;
+		margin-top: 5px;
+		img {
+			float: left;
+			margin: 0 0px 5px 0px;
+			width: 150px;
+			height: 130px;
+			border: 2px solid;
+    		border-radius: 25px;
+		}
+		article-content {
+			float: right;
+			width: 630px;
+			h2 {
+				margin-bottom: 4px;
+				@include font-rem(20);
+				&.link-post {
+					margin-bottom: 0px + $doc-line-height;
+					margin-bottom: 0rem + ($doc-line-height / $doc-font-size);
+				}
 			}
-		}
-		p {
-			@include font-rem(14);
-		}
-		p+p {
-			text-indent: 0;
+			
+			/*                  Tags                                                  
+			http://design.altervista.org/css-tags-how-to-style-post-tags/
+			*/
+			
+			.tags a {
+			    display: inline-block;
+			    height: 15px;
+			    line-height: 15px;
+			    position: relative;
+			    margin: 10px 16px 8px 0;
+			    padding: 0 10px 0 12px;
+			    background: #777;    
+			    -webkit-border-bottom-right-radius: 3px;
+			    border-bottom-right-radius: 3px;
+			    -webkit-border-top-right-radius: 3px;
+			    border-top-right-radius: 3px;
+			    -webkit-box-shadow: 0 1px 2px rgba(0,0,0,0.2);
+			    box-shadow: 0 1px 2px rgba(0,0,0,0.2);
+			    color: #fff;
+			    font-size: 10px;
+			    font-family: "Lucida Grande","Lucida Sans Unicode",Verdana,sans-serif;
+			    text-decoration: none;
+			    text-shadow: 0 1px 2px rgba(0,0,0,0.2);
+			    font-weight: bold;
+			    }
+			    
+			.tags a:before {
+			    content: "";
+			    position: absolute;
+			    top:0;
+			    left: -12px;
+			    width: 0;
+			    height: 0;
+			    border-color: transparent #3243A5 transparent transparent;
+			    border-style: solid;
+			    border-width: 12px 12px 12px 0;
+			    }
+			
+			.tags a:after {
+			    content: "";
+			    position: absolute;
+			    top: 10px;
+			    left: 1px;
+			    float: left;
+			    width: 5px;
+			    height: 5px;
+			    -webkit-border-radius: 50%;
+			    border-radius: 50%;
+			    background: #fff;
+			    -webkit-box-shadow: -1px -1px 2px rgba(0,0,0,0.4);
+			    box-shadow: -1px -1px 2px rgba(0,0,0,0.4);
+			    }    
+			
+			.tags a:hover {background:#777;}	
+			.tags a:hover:before {border-color:transparent #777 transparent transparent;}
+			
+			.tags a.color1 {background: #3a87ad;}
+			.tags a.color1:before {border-color: transparent #3a87ad transparent transparent;}
+			
+			.tags a.color2 {background: #3E2723;}
+			.tags a.color2:before {border-color: transparent #3E2723 transparent transparent;}
+			
+			.tags a.color3 {background: #1B5E20;}
+			.tags a.color3:before {border-color: transparent #1B5E20 transparent transparent;}
+			
+			.tags a.color4 {background: #01579B;}
+			.tags a.color4:before {border-color: transparent #01579B transparent transparent;}
+			
+			.tags a.color5 {background: #004D40;}
+			.tags a.color5:before {border-color: transparent #004D40 transparent transparent;}
+			
+			.tags a:hover {background:#666 !important}	
+			.tags a:hover:before {border-color:transparent #666 transparent transparent !important}
+			
+			
+			.small a {
+				margin-left: 3px;
+				height: 21px;
+				line-height: 21px;
+				font-size: 11px;
+			}
+			
+			.small a:before {
+				left: -10px;
+				border-width: 10px 10px 10px 0;	
+			}
+			
+			.small a:after {
+				top: 8px;
+			}			
+			
+			p {
+				@include font-rem(14);
+			}
+			p+p {
+				text-indent: 0;
+			}
 		}
 	}
 }
+
+			tag {
+			    float:left;
+			    margin:0 0 7px 20px;
+			    position:relative;
+			 
+			    font-family:'Helvetica Neue', Helvetica, Arial, sans-serif;
+			    font-size:0.75em;
+			    font-weight:bold;
+			    text-decoration:none;
+			 
+			    color:#996633;
+			    text-shadow:0px 1px 0px rgba(255,255,255,.4);
+			 
+			    padding:0.417em 0.417em 0.417em 0.917em;
+			 
+			    border-top:1px solid #d99d38;
+			    border-right:1px solid #d99d38;
+			    border-bottom:1px solid #d99d38;
+			 
+			    -webkit-border-radius:0 0.25em 0.25em 0;
+			    -moz-border-radius:0 0.25em 0.25em 0;
+			    border-radius:0 0.25em 0.25em 0;
+			 
+			    background-image: -webkit-linear-gradient(top, rgb(254, 218, 113), rgb(254, 186, 71));
+			    background-image: -moz-linear-gradient(top, rgb(254, 218, 113), rgb(254, 186, 71));
+			    background-image: -o-linear-gradient(top, rgb(254, 218, 113), rgb(254, 186, 71));
+			    background-image: -ms-linear-gradient(top, rgb(254, 218, 113), rgb(254, 186, 71));
+			    background-image: linear-gradient(top, rgb(254, 218, 113), rgb(254, 186, 71));
+			    filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,StartColorStr='#feda71', EndColorStr='#feba47');
+			 
+			    -webkit-box-shadow:
+			        inset 0 1px 0 #faeaba,
+			        0 1px 1px rgba(0,0,0,.1);
+			    -moz-box-shadow:
+			        inset 0 1px 0 #faeaba,
+			        0 1px 1px rgba(0,0,0,.1);
+			    box-shadow:
+			        inset 0 1px 0 #faeaba,
+			        0 1px 1px rgba(0,0,0,.1);
+			 
+			    z-index:100;
+			}
 
 /* Large feature header image */
 .image-wrap {
@@ -737,95 +889,4 @@ $button-size: 1.5rem;
 }
 #goog-wm-sb {
 	@extend .btn;
-}
-
-/*                  Tags                                                  
-http://design.altervista.org/css-tags-how-to-style-post-tags/
-*/
-
-.tags a {    
-    display: inline-block;
-    height: 15px;
-    line-height: 15px;
-    position: relative;
-    margin: 10px 16px 8px 0;
-    padding: 0 10px 0 12px;
-    background: #777;    
-    -webkit-border-bottom-right-radius: 3px;    
-    border-bottom-right-radius: 3px;
-    -webkit-border-top-right-radius: 3px;    
-    border-top-right-radius: 3px;
-    -webkit-box-shadow: 0 1px 2px rgba(0,0,0,0.2);
-    box-shadow: 0 1px 2px rgba(0,0,0,0.2);
-    color: #fff;
-    font-size: 10px;
-    font-family: "Lucida Grande","Lucida Sans Unicode",Verdana,sans-serif;
-    text-decoration: none;
-    text-shadow: 0 1px 2px rgba(0,0,0,0.2);
-    font-weight: bold;
-    }
-    
-.tags a:before {
-    content: "";
-    position: absolute;
-    top:0;
-    left: -12px;
-    width: 0;
-    height: 0;
-    border-color: transparent #3243A5 transparent transparent;
-    border-style: solid;
-    border-width: 12px 12px 12px 0;
-    }
-
-.tags a:after {
-    content: "";
-    position: absolute;
-    top: 10px;
-    left: 1px;
-    float: left;
-    width: 5px;
-    height: 5px;
-    -webkit-border-radius: 50%;
-    border-radius: 50%;
-    background: #fff;
-    -webkit-box-shadow: -1px -1px 2px rgba(0,0,0,0.4);
-    box-shadow: -1px -1px 2px rgba(0,0,0,0.4);
-    }    
-
-.tags a:hover {background:#777;}	
-.tags a:hover:before {border-color:transparent #777 transparent transparent;}
-
-.tags a.color1 {background: #3a87ad;}
-.tags a.color1:before {border-color: transparent #3a87ad transparent transparent;}
-
-.tags a.color2 {background: #3E2723;}
-.tags a.color2:before {border-color: transparent #3E2723 transparent transparent;}
-
-.tags a.color3 {background: #1B5E20;}
-.tags a.color3:before {border-color: transparent #1B5E20 transparent transparent;}
-
-.tags a.color4 {background: #01579B;}
-.tags a.color4:before {border-color: transparent #01579B transparent transparent;}
-
-.tags a.color5 {background: #004D40;}
-.tags a.color5:before {border-color: transparent #004D40 transparent transparent;}
-
-.tags a:hover {background:#666 !important}	
-.tags a:hover:before {border-color:transparent #666 transparent transparent !important}
-
-
-.small a {
-	height: 21px;
-	line-height: 21px;
-	float: none;
-	font-size: 11px;
-}
-
-.small a:before {
-	left: -10px;
-	border-width: 10px 10px 10px 0;	
-}
-
-.small a:after {
-	top: 8px;
 }
