Removed all images.. not looking good

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -44,7 +44,7 @@
         <img src={{ post.image }}></img>
         <article-content>
         {% else %}
-        <article-content width=800px>
+        <article-content style="width:800px">
         {% endif %}
           <h2><a href="{{ site.url }}{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></h2>
           
