--- a/_layouts/tag_index.html
+++ b/_layouts/tag_index.html
@@ -16,13 +16,22 @@ layout: page
 						  <td>
 							<h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
 							<p><strong>{{ post.date | date: "%B %e, %Y" }}</strong> . {{ post.category }} . <a href="{{ site.url}}/{{ post.url }}#disqus_thread" data-disqus-identifier="{{ post.url }}"></a>
-							<br/><small><i>{{ post.summary }}</i></small>
-							<br/><small><i class="icon-tags"></i> {% for tag in post.tags %} <a href="/tags/{{ tag }}" title="View posts tagged with &quot;{{ tag }}&quot;"><u>{{ tag }}</u></a>  {% if forloop.last != true %} {% endif %} {% endfor %} </small></p>
+							<br/><small><i>{{ post.excerpt }}</i></small>
+					          {% if post.tags %}
+					            <div class="tags small">
+					              {% for t in post.tags %}
+					                {% assign tag_color_index = forloop.index0 | mod: 5 %}
+					                {% assign tag_color = tag_colors[tag_color_index] %}
+					                <!-- <a title href class={{ tag_color }}>{{ t }}</a> -->
+					                <a title href="/tags/{{ t }}" class="color1">{{ t }}</a>
+					              {% endfor %}
+					            </div>
+					          {% endif %}
 						  </td>
 						</tr>
 						{% endif %}
 						{% endfor %}
-						{% endfor %}			
+						{% endfor %}
 					  </tbody>
 					</table> 
 				</div>
