--- a/_layouts/tag_index.html
+++ b/_layouts/tag_index.html
@@ -15,18 +15,20 @@ layout: page
 						<tr>
 						  <td>
 							<h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
-							<p><strong>{{ post.date | date: "%B %e, %Y" }}</strong> . {{ post.category }} . <a href="{{ site.url}}/{{ post.url }}#disqus_thread" data-disqus-identifier="{{ post.url }}"></a>
-							<br/><small><i>{{ post.excerpt }}</i></small>
+							<div>
 					          {% if post.tags %}
-					            <div class="tags small">
 					              {% for t in post.tags %}
 					                {% assign tag_color_index = forloop.index0 | mod: 5 %}
 					                {% assign tag_color = tag_colors[tag_color_index] %}
 					                <!-- <a title href class={{ tag_color }}>{{ t }}</a> -->
-					                <a title href="/tags/{{ t }}" class="color1">{{ t }}</a>
+					                <tag>{{ t }}</tag>
 					              {% endfor %}
-					            </div>
 					          {% endif %}
+					        </div>
+							<br>
+							<br>
+							<p><strong>{{ post.date | date: "%B %e, %Y" }}</strong> . {{ post.category }} . <a href="{{ site.url}}/{{ post.url }}#disqus_thread" data-disqus-identifier="{{ post.url }}"></a>
+							<br/><small><i>{{ post.excerpt }}</i></small>
 						  </td>
 						</tr>
 						{% endif %}
