--- a/_includes/resume/resume-head.html
+++ b/_includes/resume/resume-head.html
@@ -29,8 +29,9 @@
 <link rel="shortcut icon" sizes="196x196" href="images/touch/touch-icon-196x196.png">
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+<link rel="stylesheet" href="{{ site.url }}/assets/custom.css">
 
 <!-- stylesheets -->
 <!--{% stylesheet h5bp %}-->
 <!--{% stylesheet main %}-->
-{% stylesheet custom %}
+<!--{% stylesheet custom %}-->
