--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -31,7 +31,13 @@ hr {
 .section {
     margin-top: 15px;
     line-height: 1;
+        
+    ul {
+        color: black;
+    }
+    
     p {
+        color: black;
         font-size: 12px;
         margin: 0 0 0 2px;
         -webkit-margin-before: 0em;
@@ -47,6 +53,7 @@ hr {
 
 .block {
     margin: 0 0 0 0;
+    color: black;
 
     .main-row, .sub-row {
         display: block;
@@ -75,16 +82,25 @@ hr {
     }
     
     .summary {
-         font-size: 12px;
+        margin: 15px 0 0 0;
+        text-align: left;
+        float: left;
+        width: 100%;
+        display: block;
+        font-size: 12px;
     }
 
     ul {
+        color: black;
         padding-top: 10px;
         clear: both;
     }
 }
 
 .cloud-section {
+    color: black;
+    margin: 0 0 0 0;
+    
     .header {
         font-size: 14px;
         font-weight: bold;
