--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -10,7 +10,7 @@
                 <div class="row">
                     <div class="col-xs-12">
                         <div class="name">
-                            <center>{{ detail.first_name }} {{ detail.last_name }}</center>
+                            <center>{{ detail.first_name }} <b>{{ detail.last_name }}</b></center>
                             <hr>
                         </div>
                         <div class="details">
