--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -1,16 +1,19 @@
 // Global Values
-$primary-color: #990000;
+// $primary-color: #990000;
+$primary-color: #01679A;
 
 
 .name {
     color: $primary-color;
     font-size: 24px;
+    font-family: Arial;
 }
 
 hr {
    margin: 2px 0;
-   height: 2px;
+   height: 3px;
    background: $primary-color;
+   border-top: 0px;
 }
 
 .cloud-section {
@@ -31,6 +34,7 @@ hr {
 .section {
     margin-top: 15px;
     line-height: 1;
+    font-family: Arial;
         
     ul {
         color: black;
@@ -48,12 +52,14 @@ hr {
 }
 
 .summary {
-    margin: 5px 0 0 0;
+    font-family: Arial;
+    margin: 5px 0 5px 0;
 }
 
 .block {
     margin: 0 0 0 0;
     color: black;
+    font-family: Arial;
 
     .main-row, .sub-row {
         display: block;
@@ -82,7 +88,7 @@ hr {
     }
     
     .summary {
-        margin: 15px 0 0 0;
+        margin: 15px 0 5px 0;
         text-align: left;
         float: left;
         width: 100%;
@@ -98,6 +104,7 @@ hr {
 }
 
 .cloud-section {
+    font-family: Arial;
     color: black;
     margin: 0 0 0 0;
     
