added theme for presentation

--- a/_layouts/presentation.html
+++ b/_layouts/presentation.html
@@ -7,7 +7,7 @@
 		<title>reveal.js - Markdown Demo</title>
 
 		<link rel="stylesheet" href="{{ site.url }}/assets/reveal.js/css/reveal.css">
-		<link rel="stylesheet" href="{{ site.url }}/assets/reveal.js/css/theme/white.css" id="theme">
+		<link rel="stylesheet" href="{{ site.url }}/assets/reveal.js/css/theme/solarized.css" id="theme">
     <link rel="stylesheet" href="{{ site.url }}/assets/reveal.js/lib/css/zenburn.css">
 	</head>
 
